--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -1,11 +1,11 @@
 .login-container {
-  display: flex;
-  justify-content: center;
   margin-top: 7rem;
   border: 1px solid #eaf0ea;
   border-radius: 1rem;
   height: fit-content;
   padding-bottom: 2rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
   margin-bottom: 2rem;
   width: 30rem;
   margin-left: auto;
