--- a/src/Components/Profile/Profile.css
+++ b/src/Components/Profile/Profile.css
@@ -1,21 +1,7 @@
-.profile-container {
-  padding: 4rem 5rem;
-}
-
-.profile-wrapper {
-  border: 1px solid #e0e0e0;
-  border-radius: 1rem;
-}
-
-.user-details-section {
-  padding: 1.5rem;
-  display: flex;
-}
-
-.section-padding {
-  padding: 1.5rem;
-}
-
-.profile-left {
-  border-right: 1px solid #e0e0e0;
+@media only screen and (max-width: 760px) {
+  .mobile-profile-display {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+  }
 }
